<resources>
    <string name="app_name">BankSoal</string>
    <string name="var1">Email</string>
    <string name="bsignin">Sign-In</string>
    <string name="bReg">Register</string>
    <string name="tLogin">LOGIN</string>
    <string name="tData">Data Anda</string>
    <string name="tnama">Nama: </string>
    <string name="temail">Email: </string>
    <string name="tpassword">Password: </string>
    <string name="label2">Login Berhasil</string>
    <string name="label3">Register Berhasil</string>
    <string name="label4">Isi Data Berhasil</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="idaftar">Daftar</string>
    <string name="edAlamat">Masukkan Nama</string>
    <string name="eemail">Masukkan Email</string>
    <string name="edPass">Masukkan Password</string>
    <string name="erepass">Masukkan Password Kembali</string>
    <string name="ealamat">Masukkan Alamat</string>
    <string name="eNm">Fifi</string>

    <string name="eSubmit">Submit</string>
    <string name="eLogout">Logout</string>

    <string name="ssoal">Lihat Soal</string>
    <string name="usoal">Upload Soal</string>
    <string name="namapp">Bank Soal Application</string>
    <string name="desc">Solusi belajar persiapan soal ujian</string>
    <string name="descLihatSoal">Kategori Mata Pelajaran</string>

    <string name="K1">Kumpulan Soal UAS</string>
    <string name="K2">Kumpulan Soal UTS</string>
    <string name="K3">Contoh Soal UAS 2</string>
    <string name="K4">Contoh Soal UN</string>
    <string name="descKategori">SubKategori Bank Soal</string>


    <string name="desctampil">Daftar Soal dan Jawaban</string>
    <string name="descinput">Input Soal dan Jawaban</string>

    <string name="artikel">ARTIKEL</string>


    <string name="P1">NAMA : Fitri</string>
    <string name="P2">EMAIL : fitrialfiana62@gmail.com</string>
    <string name="P3">PASSWORD : .....</string>
    <string name="P4">USER : ftr_1</string>

    <string name="tdeletedata">Delete Data</string>
    <string name="tsimpan">Save</string>
    <string name="tcancel">Cancel</string>
    <string name="tdeditdata">Edit Data</string>
    <string name="tcreatedata">Create Data</string>
    <string name="tview">View</string>
    <string name="snama">Soal</string>
    <string name="snotelp">Jawaban</string>


</resources>