<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".KategoriSoal">

<ImageView
    android:id="@+id/logoapp1"
    android:layout_width="76dp"
    android:layout_height="41dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:textColorHint="@color/white"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHorizontal_bias="0.048"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.037"
    app:srcCompat="@drawable/iconlogin" />

<TextView
    android:id="@+id/namaapp1"
    android:layout_width="242dp"
    android:layout_height="39dp"
    android:text="@string/namapp"
    android:textColor="@color/white"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.627"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.04" />


    <TextView
        android:id="@+id/descKS"
        android:layout_width="190dp"
        android:layout_height="36dp"
        android:text="@string/descKategori"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.565"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <Button
        android:id="@+id/btk3"
        android:layout_width="198dp"
        android:layout_height="41dp"
        android:background="#00773F"
        android:text="@string/K3"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btK2"
        android:layout_width="192dp"
        android:layout_height="49dp"
        android:background="#00773F"
        android:text="@string/K2"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626" />

    <Button
        android:id="@+id/btK1"
        android:layout_width="199dp"
        android:layout_height="43dp"
        android:background="#00773F"
        android:text="@string/K1"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.385" />

    <Button
        android:id="@+id/btK4"
        android:layout_width="185dp"
        android:layout_height="51dp"
        android:background="#00773F"
        android:text="@string/K4"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />


</androidx.constraintlayout.widget.ConstraintLayout>