<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".Dashboard">


    <ImageView
        android:id="@+id/logoapp1"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037"
        app:srcCompat="@drawable/iconlogin" />

    <TextView
        android:id="@+id/namaapp1"
        android:layout_width="242dp"
        android:layout_height="39dp"
        android:text="@string/namapp"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/descrip"
        android:layout_width="289dp"
        android:layout_height="39dp"
        android:text="@string/desc"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.183" />

    <ImageView
        android:id="@+id/imagedash1"
        android:layout_width="105dp"
        android:layout_height="129dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.788"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        app:srcCompat="@drawable/iconsoal" />

    <ImageView
        android:id="@+id/imagedash3"
        android:layout_width="93dp"
        android:layout_height="79dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.447"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.677"
        app:srcCompat="@drawable/iconsoal" />

    <ImageView
        android:id="@+id/imagedash2"
        android:layout_width="111dp"
        android:layout_height="123dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.089"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        app:srcCompat="@drawable/iconsoal" />

    <Button
        android:id="@+id/btartikel"
        android:layout_width="111dp"
        android:layout_height="34dp"
        android:background="#00773F"
        android:text="@string/artikel"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <Button
        android:id="@+id/btcari"
        android:layout_width="96dp"
        android:layout_height="38dp"
        android:background="#00773F"
        android:text="@string/ssoal"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />


    <Button
        android:id="@+id/btupload"
        android:layout_width="111dp"
        android:layout_height="34dp"
        android:background="#00773F"
        android:text="@string/usoal"
        android:textColor="#ffffff"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.516" />


</androidx.constraintlayout.widget.ConstraintLayout>